@@ -1,5 +1,7 @@
 2006-03-26  Titus Brown  <t@issola.caltech.edu>
 
+	* Added docs & (fragile) tests to the dns_check extension module.
+
 	* Added dns_check.py extension module.  No docs/tests yet.
 
 2006-03-25  Titus Brown  <t@issola.caltech.edu>
